# AirLoRa-System

./: .gitignore  PROJECT_GUIDE.md
aircraft/: Что делать прямо сейчас_002.txt
aircraft/arduino/rx-esp32/: 1_command.create.recieve.all  BatteryMonitor.cpp  BatteryMonitor.h  CommonTypes.h  Config.h  FlightStabilizer.cpp  FlightStabilizer.h  GPS_Handler.h  I2C_Master.cpp  LoRaCommunicator.cpp  LoRaCommunicator.h  MPU9250_Handler.cpp  MPU9250_Handler.h  PCA9685_ServoController.cpp  PCA9685_ServoController.h  Receiver_Air_Plane_10_001_0031_apr05.ino  Unified_LEDC_Controller.cpp  Unified_LEDC_Controller.h  utils.h
aircraft/arduino/rx-esp32/Docs/: Document.md  ESP32_pin_set_schem.md  LCommunicator.h.md  LoRaCommunicator.h.md
aircraft/arduino/rx-esp32s3/: 1_command.create.recieve.all  CommonTypes.h  Config.h  FilterManager.cpp  FilterManager.h  FlightStabilizer.h  I2C_Master.cpp  I2C_Master.h  LoRaCommunicator.cpp  LoRaCommunicator.h  MadgwickFilter.cpp  PCA9685_ServoController.h  Receiver_S3_AirPlane_11_0032_apr15.ino  Unified_LEDC_Controller.cpp  Unified_LEDC_Controller.h  VibrationEstimator.cpp  VibrationEstimator.h
aircraft/arduino/rx-esp32s3/Docs/: .Document_01.md.kate-swp  Config.h.v1.md  Config.h.vers2.md  Document.md  Document_01.md  ESP32_pin_set_schem.md  GY87_Handler_OLD.cpp.md  GY87_Handler_OLD.h.md  README.md
aircraft/arduino/rx-esp32s3/Receiver_S3_AirPlane_11_00321_apr15/: 12_command.create.recieve.all  1_command.create.recieve.all  BatteryMonitor.cpp  BatteryMonitor.h  CommonTypes.h  Config.h  Config.h.OLD_Vers.md  FlightStabilizer.cpp  (+13 more)
aircraft/drone_v31_video/: Dockerfile.rpi-zero2w  docker-compose.yml  manage.sh  manage.sh.md  Описание проекта 001.txt
aircraft/drone_v31_video/src/: camera_interface.py  camera_pipeline.py  esp32_uart_sender.ino  ground_station.py  hello_drone.py  requirements.txt  telemetry_bridge.py  telemetry_protocol.h  test_uart_mock.py  uart_protocol.h  uart_telemetry.h  uart_telemetry.py
aircraft/drone_v32_video/: Dockerfile.rpi-zero2w  docker-compose.yml  Описание проекта 002.txt
aircraft/drone_v32_video/.devcontainer/: Dockerfile.rpi-zero2w  devcontainer.json
aircraft/drone_v32_video/src/: main.cpp  receiver.py  uart_telemetry.cpp
aircraft/drone_v3_video/: Dockerfile.dev  docker-compose.yml  Описание проекта 003.txt
aircraft/drone_v3_video/.devcontainer/: Dockerfile  Dockerfile.rpi-zero2w  devcontainer.json
aircraft/drone_v3_video/src/: CMakeLists.txt  main.cpp  sender.cpp  telemetry_protocol.h
ground-station/arduino/tx-esp32/: CommonTypes.h  Config.h  DataPacketBuilder.cpp  DataPacketBuilder.h  DisplayManager.cpp  DisplayManager.h  ESP32_Sender_10_001_0052_apr05.ino  InputControllers.cpp  InputControllers.h  LoRaCommunicator.cpp  LoRaCommunicator.h  PRINT_ERROR.h  print_error.cpp  utils.cpp
(+2 files in other folders)
